liuyi-ms-k8s-provider/liuyi-ms-k8s-provider.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: liuyi-ms-k8s-provider
  labels:
    app: liuyi-ms-k8s-provider
spec:
  replicas: 1
  selector:
    matchLabels:
      app: liuyi-ms-k8s-provider
  template:
    metadata:
      labels:
        app: liuyi-ms-k8s-provider
    spec:
      hostAliases:
      - hostnames:
        - "s5"
        ip: "172.17.62.202"
      imagePullSecrets:
      - name: liuyi-regsitry-outer
      containers:
      - name: liuyi-ms-k8s-provider
        image: registry.cn-beijing.aliyuncs.com/xiasimuou/liuyi-ms-k8s-provider:1.0.1-SNAPSHOT
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 36000
          initialDelaySeconds: 5
          timeoutSeconds: 1
        ports:
        - containerPort: 36000
          hostPort: 36000

---
apiVersion: v1
kind: Service
metadata:
  name: liuyi-ms-k8s-provider             # 名称
  labels:
    app: liuyi-ms-k8s-provider
spec:
  type: ClusterIP                               # 开发端口的类型
  ports:
  - port: 36000                                 # 通过service来访问的端口
    targetPort: 36000
    protocol: TCP
  selector:                                     # service负载的容器需要有同样的labels
    app: liuyi-ms-k8s-provider

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: liuyi-ms-k8s-provider
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: s5
    http:
      paths:
      - path: /liuyi/provider
        backend:
          serviceName: liuyi-ms-k8s-provider
          servicePort: 36000
